refactor: Service 클레스의 private 함수 제거